DeviceSearcher now uses multiple threads